<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_backgroung"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewRussianLanguageMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/rus_lang_main_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#3E4757"
        android:textStyle="italic"
        android:textSize="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_class_5"
        style="@style/Button.RoundNew.Yellow"
        android:layout_marginTop="80dp"
        android:onClick="showContentFiveClass"
        android:text="@string/button_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toStartOf="@+id/main_button_class_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRussianLanguageMain" />


    <Button
        android:id="@+id/main_button_class_6"
        style="@style/Button.RoundNew.Yellow"
        android:layout_marginTop="80dp"
        android:onClick="showContentSixClass"
        android:text="@string/button_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toStartOf="@+id/main_button_class_7"
        app:layout_constraintStart_toEndOf="@+id/main_button_class_5"
        app:layout_constraintTop_toBottomOf="@+id/textViewRussianLanguageMain" />

    <Button
        android:id="@+id/main_button_class_7"
        style="@style/Button.RoundNew.Yellow"
        android:layout_marginTop="80dp"
        android:onClick="showContentSevenClass"
        android:text="@string/button_7"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_button_class_6"
        app:layout_constraintTop_toBottomOf="@+id/textViewRussianLanguageMain" />

    <Button
        android:id="@+id/main_button_class_8"
        style="@style/Button.RoundNew.Yellow"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:onClick="showContentEightClass"
        android:text="@string/button_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toStartOf="@+id/main_button_class_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button_class_5" />

    <Button
        android:id="@+id/main_button_class_9"
        style="@style/Button.RoundNew.Yellow"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:onClick="showContentNineClass"
        android:text="@string/button_9"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_button_class_8"
        app:layout_constraintTop_toBottomOf="@+id/main_button_class_7" />

</androidx.constraintlayout.widget.ConstraintLayout>